--- a/css/styles.css
+++ b/css/styles.css
@@ -17,25 +17,22 @@ body {
 header {
     background-color: #000000;
     color: #ffffff;
-    padding: 20px 0;
-    position: fixed;
-    width: 100%;
-    top: 0;
-    z-index: 1000;
+    padding: 20px;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
-header h1 {
-    margin-left: 20px;
-    font-size: 24px;
-}
-
 .logo {
     height: 60px;
-    margin-left: 20px;
-    vertical-align: middle;
+    margin-right: 20px;
+    background-color: #ffffff;
+    padding: 5px;
+    border-radius: 5px;
+}
+
+header h1 {
+    font-size: 24px;
 }
 
 nav ul {
