--- a/css/styles.css
+++ b/css/styles.css
@@ -28,10 +28,9 @@ header {
 
 .logo {
     height: 60px;
-    background-color: #000000; /* Black background for contrast */
     padding: 5px;
+    border: 2px solid #FFA500; /* Orange border for visibility */
     border-radius: 5px;
-    margin-right: 20px;
 }
 
 header h1 {
