--- a/css/styles.css
+++ b/css/styles.css
@@ -27,6 +27,7 @@ header {
     justify-content: space-between;
 }
 
+/* Logotipo e Título */
 .logo-container {
     display: flex;
     align-items: center;
@@ -35,20 +36,23 @@ header {
 .logo {
     height: 60px;
     padding: 5px;
-    border: 2px solid #FFA500; /* Orange border for visibility */
+    border: 2px solid #FFA500;
     border-radius: 5px;
-    margin-right: 10px;
+    margin-right: 15px;
 }
 
 header h1 {
     font-size: 24px;
+    white-space: nowrap; /* Garante que o texto do título não quebra */
 }
 
+/* Navegação */
 nav ul {
     list-style: none;
     display: flex;
     justify-content: flex-end;
-    margin-right: 20px;
+    flex-grow: 1; /* Faz com que o menu ocupe o espaço disponível */
+    margin-left: auto;
 }
 
 nav ul li {
@@ -62,7 +66,7 @@ nav ul li a {
 }
 
 nav ul li a:hover {
-    color: #FFA500; /* Laranja para destaque */
+    color: #FFA500;
 }
 
 /* Conteúdo principal */
