--- a/css/styles.css
+++ b/css/styles.css
@@ -173,10 +173,29 @@ a:hover {
 
 /* Layout responsivo */
 @media (max-width: 768px) {
+    header {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
+    .logo {
+        height: 50px;
+        margin-bottom: 10px;
+    }
+
     nav ul {
         flex-direction: column;
-        align-items: flex-start;
-        margin-left: 20px;
+        align-items: center;
+        width: 100%;
+    }
+
+    nav ul li {
+        margin: 5px 0;
+    }
+
+    nav ul li a {
+        font-size: 16px;
     }
 
     .container {
@@ -187,11 +206,25 @@ a:hover {
         font-size: 20px;
     }
 
-    nav ul li a {
-        font-size: 16px;
+    .section h2 {
+        font-size: 18px;
+    }
+}
+
+@media (max-width: 480px) {
+    .logo {
+        height: 40px;
     }
 
-    .logo {
-        height: 50px;
+    header h1 {
+        font-size: 18px;
+    }
+
+    nav ul li a {
+        font-size: 14px;
+    }
+
+    .container {
+        padding: 8px;
     }
 }
