--- a/css/styles.css
+++ b/css/styles.css
@@ -27,6 +27,14 @@ header {
     justify-content: space-between;
 }
 
+/* Botão do menu hamburger */
+.menu-toggle {
+    display: none;
+    font-size: 30px;
+    color: #ffffff;
+    cursor: pointer;
+}
+
 /* Logotipo e Título */
 .logo-container {
     display: flex;
@@ -188,6 +196,13 @@ a:hover {
         flex-direction: column;
         align-items: center;
         width: 100%;
+        max-height: 0;
+        overflow: hidden;
+        transition: max-height 0.3s ease-out;
+    }
+
+    nav ul.open {
+        max-height: 400px;
     }
 
     nav ul li {
@@ -196,6 +211,10 @@ a:hover {
 
     nav ul li a {
         font-size: 16px;
+    }
+
+    .menu-toggle {
+        display: block;
     }
 
     .container {
