--- a/css/styles.css
+++ b/css/styles.css
@@ -27,14 +27,6 @@ header {
     justify-content: space-between;
 }
 
-/* Botão do menu hamburger */
-.menu-toggle {
-    display: none;
-    font-size: 30px;
-    color: #ffffff;
-    cursor: pointer;
-}
-
 /* Logotipo e Título */
 .logo-container {
     display: flex;
@@ -87,12 +79,13 @@ nav ul li ul {
     display: none;
     position: absolute;
     top: 100%;
-    left: 0;
+    right: 0; /* Alinha o dropdown à direita */
     background-color: #333333;
     padding: 0;
     border-radius: 5px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
     z-index: 1000;
+    min-width: 220px; /* Garante espaço suficiente */
 }
 
 nav ul li:hover ul {
@@ -100,7 +93,7 @@ nav ul li:hover ul {
 }
 
 nav ul li ul li {
-    width: 200px;
+    width: 100%;
 }
 
 nav ul li ul li a {
@@ -196,13 +189,6 @@ a:hover {
         flex-direction: column;
         align-items: center;
         width: 100%;
-        max-height: 0;
-        overflow: hidden;
-        transition: max-height 0.3s ease-out;
-    }
-
-    nav ul.open {
-        max-height: 400px;
     }
 
     nav ul li {
@@ -211,10 +197,6 @@ a:hover {
 
     nav ul li a {
         font-size: 16px;
-    }
-
-    .menu-toggle {
-        display: block;
     }
 
     .container {
