--- a/css/styles.css
+++ b/css/styles.css
@@ -26,6 +26,8 @@ header {
     align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
+    height: 80px; /* Altura fixa */
+    overflow: hidden; /* Evita expansão */
 }
 
 /* Logotipo e Título */
@@ -57,6 +59,7 @@ nav ul {
     display: flex;
     justify-content: flex-end;
     margin-left: auto;
+    padding: 0;
 }
 
 nav ul li {
@@ -113,10 +116,10 @@ nav ul.active {
     justify-content: center;
     width: 100%;
     position: fixed;
-    top: 0;
+    top: 80px; /* Ajustado para começar abaixo do header */
     left: 0;
     background-color: #000000;
-    height: 100vh;
+    height: calc(100vh - 80px);
     padding: 20px 0;
     text-align: center;
     overflow-y: auto;
