--- a/css/styles.css
+++ b/css/styles.css
@@ -168,6 +168,15 @@ nav ul.active li ul.submenu li {
     }
 }
 
+/* Ajuste de largura e alinhamento no mobile */
+@media (max-width: 768px) {
+    nav ul.active li ul.submenu {
+        width: 100%;
+        margin-left: 0;
+        padding: 10px;
+    }
+}
+
 @media (max-width: 480px) {
     .logo {
         height: 40px;
