--- a/css/styles.css
+++ b/css/styles.css
@@ -61,33 +61,30 @@ nav ul {
 
 nav ul li {
     position: relative;
-    padding: 0 10px;
 }
 
 nav ul li a {
-    color: #ffffff;
-    text-decoration: none;
-    font-size: 18px;
     padding: 10px 15px;
+    color: white;
+    text-decoration: none;
+}
+
+/* Mostrar submenu no hover */
+nav ul li:hover > ul.submenu {
     display: block;
 }
 
-/* Estilo correto para mostrar o dropdown na versão web */
-nav ul li:hover ul.submenu {
-    display: block;
-}
-
-/* Estilo do dropdown */
+/* Submenu estilo */
 nav ul li ul.submenu {
     display: none;
     position: absolute;
     top: 100%;
     left: 0;
-    background-color: #333333;
+    background-color: #333;
     border-radius: 5px;
     min-width: 200px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-    z-index: 999;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.3);
+    z-index: 1000;
 }
 
 nav ul li ul.submenu li {
@@ -95,7 +92,7 @@ nav ul li ul.submenu li {
 }
 
 nav ul li ul.submenu li a {
-    color: #ffffff;
+    color: white;
 }
 
 nav ul li ul.submenu li a:hover {
